# cookiecutter-mcp

./: .gitignore  CONTRIBUTING.md  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  api.py  main.py  tools.py
{{cookiecutter.project_slug}}/tests/: test_api.py
