[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
requires-python = "{{ cookiecutter.python_version }}"
dependencies = [
    "fastmcp>=2.7.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "pytest",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]